Add Samples & Utils Commit

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,7 +1,9 @@
 FROM mysql
-ENV MYSQL_DATABASE bookstore
-ENV MYSQL_ROOT_HOST %
-ENV MYSQL_ROOT_PASSWORD bookstore123*
-
+ENV MYSQL_DATABASE='bookstore-users' \
+    MYSQL_ROOT_HOST='%' \
+    MYSQL_ROOT_PASSWORD='r00t123!+' \
+    MYSQL_USER='bookstore' \
+    MYSQL_PASSWORD='b00kst0r3'
+    
 COPY . /docker-entrypoint-initdb.d/
-EXPOSE 3306
+EXPOSE 3306 33060
